--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
   <h1>آقا سلام 👋🏻</h1>
   <p>شنیدیم فرهنگیان دراومدی... باریکلا! 🎓</p>
 
+<img id="congrats-img" src="dad-birthday.jpg" alt="تبریک !" />
+
+<div class="control">
+  <button class="play-button">پخش</button>
+</div>
+
   <div class="control">
     <button class="play-button" id="playBtn">✋🏻بزن قدش</button>
   </div>
