--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <h1>آقا سلام 👋🏻</h1>
   <p>شنیدیم فرهنگیان دراومدی... باریکلا! 🎓</p>
 
-<img id="congrats-img" src="dad-birthday.jpg" alt="تبریک !" />
+<img id="congrats-img" src="Alireza-and-me.jpg" alt="تبریک !" />
 
 <div class="control">
   <button class="play-button">پخش</button>
