--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
     }
     h1 {
       color: #bc6c25;
-      font-size: 2em;
+  h1 {
+  font-size: 2rem;
+}
+p, button, span {
+  font-size: 1.2rem;
+}
     }
     .control {
       margin-top: 60px;
