--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ p, button, span {
 <img id="congrats-img" src="Alireza-and-me.jpg" alt="تبریک !" />
 
 <div class="control">
-  <button class="play-button">پخش</button>
+  <button class="play-button"></button>
 </div>
 
   <div class="control">
