--- a/index.html
+++ b/index.html
@@ -11,35 +11,33 @@
       padding: 100px;
       direction: rtl;
     }
+
     h1 {
       color: #bc6c25;
-  h1 {
-  font-size: 2rem;
-}
-p, button, span {
-  font-size: 1.2rem;
-}
+      font-size: 6rem;
+      margin-bottom: 40px;
     }
-    .control {
-      margin-top: 60px;
+
+    p {
+      font-size: 3rem;
+      color: #6c584c;
+      margin-bottom: 60px;
     }
-    .play-button {
-      font-size: 1.2em;
-      padding: 20px 40px;
-      background-color: #dda15e;
-      border: none;
-      border-radius: 16px;
-      cursor: pointer;
-      color: white;
-    }
-    .play-button:hover {
-      background-color: #bc6c25;
-    }
+
     #congrats-img {
       margin-top: 80px;
       display: none;
-      max-width: 300px;
+      max-width: 600px;
       border-radius: 24px;
+    }
+
+    .play-button {
+      font-size: 2rem;
+      padding: 0;
+      background: none;
+      border: none;
+      color: #bc6c25;
+      cursor: pointer;
     }
   </style>
 </head>
@@ -48,17 +46,11 @@ p, button, span {
   <h1>آقا سلام 👋🏻</h1>
   <p>شنیدیم فرهنگیان دراومدی... باریکلا! 🎓</p>
 
-<img id="congrats-img" src="Alireza-and-me.jpg" alt="تبریک !" />
+  <button class="play-button" id="playBtn">✋🏻 بزن قدش</button>
 
-<div class="control">
-  <button class="play-button"></button>
-</div>
+  <img id="congrats-img" src="Alireza-and-me.jpg" alt="تبریک!" />
 
-  <div class="control">
-    <button class="play-button" id="playBtn">✋🏻بزن قدش</button>
-  </div>
-
-  <img id="congrats-img" src="your-image.jpg" alt="تبریک!" />
+  <audio id="audio" src="your-audio.mp3"></audio>
 
   <script>
     const playBtn = document.getElementById('playBtn');
@@ -68,11 +60,9 @@ p, button, span {
     playBtn.onclick = function () {
       if (audio.paused) {
         audio.play();
-        this.textContent = 'آقا تبریک برکاننا';
         img.style.display = 'block';
       } else {
         audio.pause();
-        this.textContent = '✋🏻بزن قدش';
         img.style.display = 'none';
       }
     };
