--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
   <h1>آقا سلام 👋🏻</h1>
   <p>شنیدیم فرهنگیان دراومدی... باریکلا! 🎓</p>
 
-  <button class="play-button" id="playBtn">✋🏻 بزن قدش</button>
+  <button class="play-button" id="playBtn">با انگشت بزن قدش ✋🏻
+  واقعا بِزنا</button>
 
   <img id="congrats-img" src="Alireza-and-me.jpg" alt="تبریک!" />
 
