--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
   واقعا بِزنا</button>
 
   <img id="congrats-img" src="Alireza-and-me.jpg" alt="تبریک!" />
+ <style>
+  #congrats-img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 600px;
+  border-radius: 24px;
+}
 
   <audio id="audio" src="your-audio.mp3"></audio>
 
