--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     }
 
     .play-button {
-      font-size: 2rem;
-      padding: 0;
+      font-size: 3rem;
+      padding: 20px 50px;
       background: none;
       border: none;
       color: #bc6c25;
