--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
   <h1>آقا سلام 👋🏻</h1>
   <p>شنیدیم فرهنگیان دراومدی... باریکلا! 🎓</p>
 
-  <button class="play-button" id="playBtn">با انگشت بزن قدش ✋🏻
-    
-  واقعا بِزنا</button>
+  <button class="play-button" id="playBtn">با انگشت بزن قدش ✋🏻</button>
+  حتما بزنا
 
   <img id="congrats-img" src="Alireza-and-me.jpg" alt="تبریک!" />
     <style>
@@ -57,7 +56,7 @@
   margin-left: auto;
   margin-right: auto;
   max-width: 600px;
-  border-radius: 24px;
+  border-radius: 24p
 }
  
 
