--- a/index.html
+++ b/index.html
@@ -43,8 +43,13 @@
 </head>
 <body>
 
-  <h1>آقا سلام 👋🏻</h1>
-  <p>شنیدیم فرهنگیان دراومدی... باریکلا! 🎓</p>
+  <h1>آقا تبریک🎉🫀</h1>
+<p>داداش شنیدم از فرهنگیان در اومدی </p>
+  <p>تبریک عرض می نمایم <p>
+    <p>آقا براتون آرزوی موفقیت دارم <p>
+      <p>اصلا هم بخاطر اینکه بهتون بگم <p>
+        <p>سهم شیرینی منو نگه دارین این سایتو نزدم <p>
+          <p>🗿🍰🤣<p>
 
   <button class="play-button" id="playBtn">با انگشت بزن قدش ✋🏻</button>
   
